Add currency flag images and enhance UI
Introduces an image URL field to the Currency record and updates currency loaders to provide flag images for each currency. The Desktop UI is significantly improved with a custom undecorated window, a modern title bar, rounded corners, and currency ComboBoxes that display flag icons. These changes enhance the application's visual appeal and usability.